--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.6",
     "@solarity/hardhat-markup": "^1.0.4",
     "hardhat": "^2.22.2",
     "hardhat-deploy": "^0.11.45"
